# EventsManagement

./: .gitignore  README.md  core.py  events.py  main.py  pyproject.toml  report.md  requirements.text  resources.py
UI/: home.py
UI/menus/: event_creation.py  see_inventory.py  see_schedule.py
core/: _init_.py  core.py  events.py  planification.py  planification2.py  resources.py
data/: Events.json
