[project]
name = "EventsManagement"
version = "0.1.0"
description = "Sistema de gestión de recursos y agendamiento de eventos."
authors = [
    { name = "RDR-03" }
]
readme = "README.md"

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Streamlit",
]
dependencies = [
    "streamlit>=1.50.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}